# behemoth

./: README.md
backend/: .env.example  .gitignore  manage.py  pyproject.toml
backend/api/: models.py  urls.py  views.py
backend/behemoth/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .prettierrc  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue  components.d.ts
frontend/app/components/bhm/navbar/: index.vue  logo.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue  test.vue
